# RocketAeroSpecCalculator

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
workflows/: release.yml
